@@ -18,6 +18,8 @@ Ctrlproxy 3.0.4 UNRELEASED
 
 	* Allow configuring a single listener in ~/.ctrlproxy/config.
 
+	* Recognize NS as command for NickServ (#145)
+
 
 Ctrlproxy 3.0.3 2007-07-22
 
